--- a/MicrobePhylogenomics.yaml
+++ b/MicrobePhylogenomics.yaml
@@ -61,6 +61,7 @@ dependencies:
   - numpy-base=1.16.6=py27hde5b4d6_0
   - openssl=1.1.1l=h7f8727e_0
   - orthofinder=2.3.3=1
+  - pal2nal=14.1=pl5262hdfd78af_2
   - pcre=8.45=h295c915_0
   - perl=5.26.2=h14c3975_0
   - perl-archive-tar=2.32=pl526_0
@@ -71,6 +72,7 @@ dependencies:
   - perl-exporter=5.72=pl526_1
   - perl-exporter-tiny=1.002001=pl526_0
   - perl-extutils-makemaker=7.36=pl526_1
+  - perl-getopt-long=2.50=pl526_1
   - perl-io-compress=2.087=pl526he1b5a44_0
   - perl-io-zlib=1.10=pl526_2
   - perl-json=4.02=pl526_0
